--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">Baking</string>
     <string name="action_settings">Settings</string>
 
+    <string name="authority" translatable="false">com.mahmoudtarrasse.baking</string>
+
 </resources>
