--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,11 @@
     <string name="action_settings">Settings</string>
 
     <string name="authority" translatable="false">com.mahmoudtarrasse.baking</string>
+    <string name="title_activity_recipe">RecipeActivity</string>
+    <string name="recipe_activity_title">Steps</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_step">StepActivity</string>
 
 </resources>
