--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,5 +8,7 @@
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_step">StepActivity</string>
+    <string name="previous_button_prev">previous</string>
+    <string name="next_button">next</string>
 
 </resources>
