images added in list items widget show ingredients last seen recipe

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,5 +12,6 @@
     <string name="next_button">next</string>
     <string name="novideo_available">noVideo available</string>
     <string name="no_recipes_yet">No Recipes Yet</string>
+    <string name="ingredients">Ingredients</string>
 
 </resources>
